crates/skribble_css/tests/snapshots/css__breakpoints.snap
---
source: crates/skribble_css/tests/css.rs
assertion_line: 63
expression: "generate_css(&config, &collector.get_class_names())"

---
:root {
  --color-text-primary: rgba(168, 85, 247, var(--text-opacity));
  --color-text-background: rgba(249, 250, 251, var(--text-opacity));
}

html.dark {
  --color-text-background: rgba(17, 24, 39, var(--text-opacity));
}

.text\:\:\$transparent {
  --text-opacity: 1;
  color: transparent;
}

.text\:\:\$slate500 {
  --text-opacity: 1;
  color: rgba(100, 116, 139, var(--text-opacity));
}

.text\:\:\$primary {
  --text-opacity: 1;
  color: var(--color-text-primary);
}

.px\:\:\$px {
  padding-right: 1px;
  padding-left: 1px;
}

.px\:\:\[10px\] {
  padding-right: 10px;
  padding-left: 10px;
}

.\$group:hover .groupHover\:focus\:m\:\:\$4:focus, .group:hover .groupHover\:focus\:m\:\:\$4:focus, [role='group']:hover .groupHover\:focus\:m\:\:\$4:focus {
  margin: 1rem;
}

@media (min-width: 640px) {
  .sm\:focus\:m\:\:\$1:focus {
    margin: 0.25rem;
  }
}

@media (min-width: 768px) {
  .md\:\:\$hidden {
    display: hidden;
  }

  .md\:text\:\:\$background {
    --text-opacity: 1;
    color: var(--color-text-background);
  }
}

@media (min-width: 1536px) {
  .xxl\:active\:focus\:\:\$block:active:focus {
    display: block;
  }
}

