crates/skribble_css/tests/snapshots/css__container.snap
---
source: crates/skribble_css/tests/css.rs
assertion_line: 62
expression: "generate_css(&config, &collector.get_class_names())"

---
:root {
  --sk-container-max-width: none;
}

.\$container {
  width: 100%;
  max-width: var(--sk-container-max-width);
}

@media (min-width: 640px) {
  :root {
    --sk-container-max-width: 640px;
  }
}

@media (min-width: 768px) {
  :root {
    --sk-container-max-width: 768px;
  }
}

@media (min-width: 1024px) {
  :root {
    --sk-container-max-width: 1024px;
  }
}

@media (min-width: 1280px) {
  :root {
    --sk-container-max-width: 1280px;
  }
}

@media (min-width: 1536px) {
  :root {
    --sk-container-max-width: 1536px;
  }
}

