crates/skribble_css/tests/snapshots/css__empty.snap
---
source: crates/skribble_css/tests/css.rs
assertion_line: 57
expression: "generate_css(&config, &collector.get_class_names())"

---

