crates/skribble_css/tests/snapshots/css__filters.snap
---
source: crates/skribble_css/tests/css.rs
assertion_line: 62
expression: "generate_css(&config, &collector.get_class_names())"

---
.filter\:\:\$rough {
  filter: var(--sk-group-nested-filter);
}

:root {
  --sk-custom-filter-roughen: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg"><filter id="waves" x="-20%" y="-20%" width="140%" height="140%" filterUnits="objectBoundingBox" primitiveUnits="userSpaceOnUse" color-interpolation-filters="linearRGB"><feTurbulence type="turbulence" baseFrequency="0.01 0.01" numOctaves="1" seed="1" stitchTiles="noStitch" result="turbulence"/><feDisplacementMap in="SourceGraphic" in2="turbulence" scale="20" xChannelSelector="G" yChannelSelector="A"result="displacementMap"/></filter></svg>#waves');
  --sk-filter-blur:  ;
  --sk-filter-brightness:  ;
  --sk-filter-contrast:  ;
  --sk-filter-custom:  ;
  --sk-filter-grayscale:  ;
  --sk-filter-hue-rotate:  ;
  --sk-filter-invert:  ;
  --sk-filter-saturate:  ;
  --sk-filter-sepia:  ;
  --sk-filter-drop-shadow:  ;
  --sk-group-nested-filter: var(--sk-filter-blur) var(--sk-filter-brightness) var(--sk-filter-contrast) var(--sk-filter-grayscale) var(--sk-filter-hue-rotate) var(--sk-filter-invert) var(--sk-filter-saturate) var(--sk-filter-sepia) var(--sk-filter-drop-shadow) var(--sk-filter-custom);
}

.filter\:\:\$rough {
  --sk-filter-custom: var(--sk-custom-filter-roughen);
}

